--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,14 @@
         android:layout_height="wrap_content"
         android:text="Szamólógép megnyitása"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="20sp"/>
+    <Button
+        android:id="@+id/toWeatherButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Időjárás megnyitása"
+        android:layout_marginTop="8dp"
         android:textSize="20sp"/>
 
 
