--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/weather"
+    style="@style/Base.Theme.Kotlinbasics2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:backgroundTint="#FEF7FF"
+    android:padding="16dp"
     android:orientation="vertical"
     tools:context=".WeatherActivity">
 
@@ -35,6 +35,7 @@
         android:hint="Add meg a neved"
         android:inputType="text"
         android:padding="12dp"
+        style="@style/EditTextStyle"
         />
 
     <TextView
@@ -45,7 +46,25 @@
         android:text="-33 °C"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:visibility="invisible"/>
+        android:visibility="gone"/>
+    <TextView
+        android:id="@+id/humidityTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="-33 °C"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:visibility="gone"/>
+    <TextView
+        android:id="@+id/windTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="-33 °C"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:visibility="gone"/>
     <Button
         android:id="@+id/searchButton"
         android:layout_width="wrap_content"
@@ -53,7 +72,8 @@
         android:layout_marginBottom="24dp"
         android:padding="12dp"
         android:text="Keresés"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        style="@style/ButtonStyle"/>
 
 
 </LinearLayout>
