--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,13 @@
     <style name="Base.Theme.Kotlinbasics2" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:background">@color/darkbg</item>
+    </style>
+    <style name="EditTextStyle">
+        <item name="backgroundTint">@color/darkestblue</item>
+    </style>
+    <style name="ButtonStyle">
+        <item name="android:backgroundTint">@color/darkestblue</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
