--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,15 @@
     <style name="Base.Theme.Kotlinbasics2" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:background">@color/lightbg</item>
     </style>
 
     <style name="Theme.Kotlinbasics2" parent="Base.Theme.Kotlinbasics2" />
+    <style name="EditTextStyle">
+        <item name="backgroundTint">@color/lightestblue</item>
+    </style>
+    <style name="ButtonStyle">
+        <item name="android:backgroundTint">@color/darkestblue</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
