Helysírási hibák javítsa

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:id="@+id/toCalculatorButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Szamólógép megnyitása"
+        android:text="Számológép megnyitása"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:textSize="20sp"
