--- a/app/src/main/res/layout/activity_greeting.xml
+++ b/app/src/main/res/layout/activity_greeting.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:background="@android:drawable/edit_text"
-        android:hint="Add meg a neved"
+        android:hint="@string/nameHint"
         android:inputType="textPersonName"
         style="@style/EditTextStyle"
         android:padding="12dp" />
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:padding="12dp"
-        android:text="Köszönts!"
+        android:text="@string/greeting"
         style="@style/ButtonStyle"/>
 
     <TextView
