--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,14 @@
         android:layout_marginTop="8dp"
         android:textSize="20sp"
         style="@style/ButtonStyle"/>
+    <Button
+        android:id="@+id/toUserListButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/userListButton"
+        android:layout_marginTop="8dp"
+        android:textSize="20sp"
+        style="@style/ButtonStyle"/>
 
 
 </LinearLayout>
