--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,4 +12,16 @@
         <item name="android:backgroundTint">@color/darkestblue</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="ListHead">
+        <item name="backgroundTint">@color/darkestblue</item>
+    </style>
+    <style name="ListBg">
+        <item name="android:background">@color/darkbg</item>
+    </style>
+    <style name="ListItem">
+        <item name="android:background">@color/darkbg</item>
+    </style>
+    <style name="ListEmail">
+        <item name="android:textColor">@color/gray</item>
+    </style>
 </resources>
