--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="lightbg">#0B9AE7</color>
     <color name="lightestblue">#6DBCDB</color>
     <color name="darkestblue">#05547C</color>
+    <color name="gray">#524F4F</color>
+    <color name="light_gray">#AAAAAA</color>
 
 </resources>
