--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,10 +8,22 @@
 
     <style name="Theme.Kotlinbasics2" parent="Base.Theme.Kotlinbasics2" />
     <style name="EditTextStyle">
-        <item name="backgroundTint">@color/lightestblue</item>
+        <item name="background">@color/lightestblue</item>
     </style>
     <style name="ButtonStyle">
         <item name="android:backgroundTint">@color/darkestblue</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="ListHead">
+        <item name="backgroundTint">@color/lightbg</item>
+    </style>
+    <style name="ListBg">
+        <item name="android:background">@color/darkbg</item>
+    </style>
+    <style name="ListItem">
+        <item name="android:background">@color/darkbg</item>
+    </style>
+    <style name="ListEmail">
+        <item name="android:textColor">@color/light_gray</item>
     </style>
 </resources>
