--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,25 +3,26 @@
     <style name="Base.Theme.Kotlinbasics2" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
-        <item name="android:background">@color/darkbg</item>
+        <item name="android:background">@color/darkestblue</item>
     </style>
     <style name="EditTextStyle">
-        <item name="backgroundTint">@color/darkestblue</item>
+        <item name="backgroundTint">@color/darkbg</item>
     </style>
     <style name="ButtonStyle">
-        <item name="android:backgroundTint">@color/darkestblue</item>
+        <item name="android:backgroundTint">@color/darkbg</item>
         <item name="android:textColor">@color/white</item>
     </style>
     <style name="ListHead">
         <item name="backgroundTint">@color/darkestblue</item>
     </style>
     <style name="ListBg">
-        <item name="android:background">@color/darkbg</item>
+        <item name="android:background">@color/verydarkbg</item>
     </style>
     <style name="ListItem">
-        <item name="android:background">@color/darkbg</item>
+        <item name="android:background">@color/verydarkbg</item>
+        <item name="android:textColor">@color/verylightbg</item>
     </style>
     <style name="ListEmail">
-        <item name="android:textColor">@color/gray</item>
+        <item name="android:textColor">@color/light_gray</item>
     </style>
 </resources>
