--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -1,65 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/calculator"
+    style="@style/Base.Theme.Kotlinbasics2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    style="@style/Base.Theme.Kotlinbasics2"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <ImageView
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="64dp"
-        android:src="@android:drawable/ic_dialog_dialer"/>
+        android:src="@android:drawable/ic_dialog_dialer" />
 
     <EditText
         android:id="@+id/elsoSzamEditText"
-        android:layout_marginTop="64dp"
+        style="@style/EditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
         android:background="@android:drawable/edit_text"
-        android:hint="@string/firstNum"
-        style="@style/EditTextStyle"/>
+        android:hint="@string/firstNum" />
+
     <EditText
         android:id="@+id/masodikSzamEditText"
-        android:layout_marginTop="16dp"
+        style="@style/EditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:background="@android:drawable/edit_text"
-        android:hint="@string/secNum"
-        style="@style/EditTextStyle"/>
+        android:hint="@string/secNum" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/osszeadasButton"
+            style="@style/ButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/szum"
             android:layout_marginEnd="4dp"
-            style="@style/ButtonStyle"/>
+            android:text="@string/szum" />
 
         <Button
             android:id="@+id/torlesButton"
+            style="@style/ButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/delete"
             android:layout_marginStart="4dp"
-            style="@style/ButtonStyle"/>
+            android:text="@string/delete" />
     </LinearLayout>
+
     <TextView
         android:id="@+id/eredmenyTextView"
-        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/eredmeny"
-        android:textSize="24sp"
         android:textAlignment="center"
-        android:textStyle="bold"/>
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
