--- a/app/src/main/res/layout/activity_random_users.xml
+++ b/app/src/main/res/layout/activity_random_users.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/userList"
+    android:id="@+id/randomUserList"
     style="@style/ListHead"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,13 +15,13 @@
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:text="@string/usersListText"
+        android:text="@string/randomUser"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/userListRecyclerView"
+        android:id="@+id/randomUserListRecyclerView"
         style="@style/ListBg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
