--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -5,8 +5,8 @@
     style="@style/Base.Theme.Kotlinbasics2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".WeatherActivity">
 
     <ImageView
@@ -23,19 +23,18 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
     <EditText
         android:id="@+id/cityEditText"
+        style="@style/EditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:background="@android:drawable/edit_text"
         android:hint="@string/cityName"
         android:inputType="text"
-        android:padding="12dp"
-        style="@style/EditTextStyle"
-        />
+        android:padding="12dp" />
 
     <TextView
         android:id="@+id/temperatureTextView"
@@ -44,7 +43,8 @@
         android:layout_marginTop="8dp"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/humidityTextView"
         android:layout_width="match_parent"
@@ -52,7 +52,8 @@
         android:layout_marginTop="8dp"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/windTextView"
         android:layout_width="match_parent"
@@ -60,16 +61,17 @@
         android:layout_marginTop="8dp"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
     <Button
         android:id="@+id/searchButton"
+        style="@style/ButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginBottom="24dp"
         android:padding="12dp"
-        android:text="@string/search"
-        android:layout_gravity="center"
-        style="@style/ButtonStyle"/>
+        android:text="@string/search" />
 
 
 </LinearLayout>
