--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,14 @@
         android:layout_marginTop="8dp"
         android:text="@string/openRuserlist"
         android:textSize="20sp" />
+    <Button
+        android:id="@+id/toCountButton"
+        style="@style/ButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/toCount"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
