--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,14 @@
         android:layout_marginTop="8dp"
         android:text="@string/colorList"
         android:textSize="20sp" />
+    <Button
+        android:id="@+id/toBeerButton"
+        style="@style/ButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Beer List"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
